Properties added for IBIS nodes
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10641 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -93,6 +93,9 @@ defaultQueryEditor.mapBasedSearchLabel=Use node label/metadata
 
 #Tools
 nodeModeTool.tooltip=Node Tool
+#HO 29/10/2010 BEGIN ******************
+IBISNodeModeTool.tooltip=IBIS Node Tool
+#HO 29/10/2010 END ******************
 linkModeTool.tooltip=Link Tool
 rapidLinkModeTool.tooltip=Rapid Prototyping
 selectionTool.tooltip=Selection Tool (s)
@@ -101,6 +104,9 @@ selectionTool.directSelectionTool.tooltip=Direct Selection Tool
 selectionTool.browseTool.tooltip=Browse Tool
 handTool.tooltip=Move Canvas
 nodeTool.tooltip=Shape Tool
+#HO 29/10/2010 BEGIN ******************
+IBISNodeTool.tooltip=IBIS Tool
+#HO 29/10/2010 END ******************
 linkTool.tooltip=Link Tool
 linkTool.line.tooltip=Straight Link
 linkTool.curve1.tooltip=Curved Link
@@ -419,7 +425,14 @@ formatting.text.color.label=Color
 formatting.node.shape.label=Shape
 formatting.node.stroke.label=Stroke
 newnode.html=New Node
+#HO 03/11/2010 BEGIN **************
+newibisnode.html=New IBIS Node
+#HO 03/11/2010 END **************
 newtext.html=New Text
+#HO 24/11/2010 BEGIN **************
+#IBIS node palette
+
+#HO 24/11/2010 END **************
 
 #items related to saving files...
 replaceFile.text=Would you like to replace the file
@@ -888,6 +901,14 @@ nodetoolpanel.shape=Shape
 nodetoolpanel.link=Link
 nodetoolpanel.linkshape.tooltip=Link Shape 
 nodetoolpanel.nodeshape.tooltip=Node Shape
+
+#HO 29/10/2010 BEGIN **************
+#NodeToolPanel
+IBISnodetoolpanel.image=Image
+#IBISnodetoolpanel.link=Link
+#IBISnodetoolpanel.linkshape.tooltip=Link Shape 
+IBISnodetoolpanel.nodeimage.tooltip=IBIS Node Image
+#HO 29/10/2010 END ****************
 
 #FillToolPanel
 filltoolpanel.fill=Fill
@@ -1653,10 +1674,12 @@ selection.debug=false
 # the popup menu palette.  Each index represents another column.
 menuFlowThreshold=0,6,12,24,40,60,77,96
 
-appletToolbarToolNames=selectionTool,nodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
-
 #HO 23/06/2010 BEGIN ***********************
-mainToolbarToolNames=selectionTool,nodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool,separator,launchPathwayTool
+#appletToolbarToolNames=selectionTool,nodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
+appletToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
+
+
+mainToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool,separator,launchPathwayTool
 #mainToolbarToolNames=selectionTool,nodeModeTool,ibisNodeModeTool, linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool,separator,launchPathwayTool
 #HO 23/06/2010 END ***********************
 fullScreenToolbarToolNames=selectionTool,handTool,zoomTool
@@ -1692,6 +1715,19 @@ nodeModeTool.ontologyNodeModeTool.name=Ontology Node Tool
 nodeModeTool.ontologyNodeModeTool.raw=/tufts/vue/images/node-ontology.gif
 
 nodeModeTool.ontologyNodeModeTool.cursorID=1
+
+// HO 29/10/2010 BEGIN ************
+IBISNodeModeTool.class=tufts.vue.IBISNodeTool$IBISNodeModeTool
+
+IBISNodeModeTool.name=IBIS Node Tool
+
+IBISNodeModeTool.shortcutKey=i
+
+IBISNodeModeTool.raw=/tufts/vue/images/accepted_issue.gif
+
+IBISNodeModeTool.cursorID=1
+
+// HO 29/10/2010 END *****************
 
 linkModeTool.class=tufts.vue.LinkTool$LinkModeTool
 
@@ -1874,6 +1910,140 @@ nodeTool.octagon.name=Octagon
 nodeTool.octagon.cssName=octagon
 
 nodeTool.octagon.shapeClass=tufts.vue.shape.RectangularPoly2D$Octagon
+
+#HO 29/10/2010 BEGIN *******************
+IBISNodeTool.class=tufts.vue.IBISNodeTool
+
+IBISNodeTool.name=IBIS Node Tool
+
+IBISNodeTool.subtools=accepted_issue,pro_argument,con_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
+
+IBISNodeTool.defaultSubtool=accepted_issue
+
+# cursor 1 is "crosshair" cursor, same on Mac & PC
+IBISNodeTool.cursorID=1
+
+IBISNodeTool.accepted_issue.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.accepted_issue.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.accepted_issue.name=Accepted Issue
+
+IBISNodeTool.accepted_issue.cssName=accepted_issue
+
+IBISNodeTool.accepted_issue.iconClass=tufts.vue.ibisicon.IBISAcceptedIssueIcon
+
+IBISNodeTool.accepted_issue.imageClass=tufts.vue.ibisimage.IBISAcceptedIssueImage
+
+IBISNodeTool.accepted_issue.raw=/tufts/vue/images/accepted_issue.gif
+
+IBISNodeTool.pro_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.pro_argument.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.pro_argument.name=Pro Argument
+
+IBISNodeTool.pro_argument.cssName=pro_argument
+
+IBISNodeTool.pro_argument.iconClass=tufts.vue.ibisicon.IBISProArgumentIcon
+
+IBISNodeTool.pro_argument.imageClass=tufts.vue.ibisimage.IBISProArgumentImage
+
+IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument.gif
+
+IBISNodeTool.con_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.con_argument.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.con_argument.name=Con Argument
+
+IBISNodeTool.con_argument.cssName=con_argument
+
+IBISNodeTool.con_argument.iconClass=tufts.vue.ibisicon.IBISConArgumentIcon
+
+IBISNodeTool.con_argument.imageClass=tufts.vue.ibisimage.IBISConArgumentImage
+
+IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument.gif
+
+IBISNodeTool.neptune.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.neptune.name=Neptune
+
+IBISNodeTool.neptune.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.neptune.cssName=neptune
+
+IBISNodeTool.neptune.iconClass=tufts.vue.ibisicon.IBISNeptuneIcon
+
+IBISNodeTool.neptune.imageClass=tufts.vue.ibisimage.IBISNeptuneImage
+
+IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.uranus.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.uranus.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.uranus.name=Uranus
+IBISNodeTool.uranus.cssName=uranus
+IBISNodeTool.uranus.iconClass=tufts.vue.ibisicon.IBISUranusIcon
+IBISNodeTool.uranus.imageClass=tufts.vue.ibisimage.IBISUranusImage
+IBISNodeTool.uranus.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.pluto.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.pluto.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.pluto.name=Pluto
+
+IBISNodeTool.pluto.cssName=pluto
+
+IBISNodeTool.pluto.iconClass=tufts.vue.ibisicon.IBISPlutoIcon
+
+IBISNodeTool.pluto.imageClass=tufts.vue.ibisimage.IBISPlutoImage
+
+IBISNodeTool.pluto.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.accepted_answer.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.accepted_answer.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.accepted_answer.name=Accepted Answer
+
+IBISNodeTool.accepted_answer.cssName=accepted_answer
+
+IBISNodeTool.accepted_answer.iconClass=tufts.vue.ibisicon.IBISAcceptedAnswerIcon
+
+IBISNodeTool.accepted_answer.imageClass=tufts.vue.ibisimage.IBISAcceptedAnswerImage
+
+IBISNodeTool.accepted_answer.raw=/tufts/vue/images/accepted_answer.gif
+
+IBISNodeTool.rejected_answer.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.rejected_answer.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.rejected_answer.name=Rejected Answer
+
+IBISNodeTool.rejected_answer.cssName=rejected_answer
+
+IBISNodeTool.rejected_answer.iconClass=tufts.vue.ibisicon.IBISRejectedAnswerIcon
+
+IBISNodeTool.rejected_answer.imageClass=tufts.vue.ibisimage.IBISRejectedAnswerImage
+
+IBISNodeTool.rejected_answer.raw=/tufts/vue/images/rejected_answer.gif
+
+IBISNodeTool.saturn.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.saturn.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.saturn.name=Saturn
+
+IBISNodeTool.saturn.cssName=saturn
+
+IBISNodeTool.saturn.iconClass=tufts.vue.ibisicon.IBISSaturnIcon
+
+IBISNodeTool.saturn.imageClass=tufts.vue.ibisimage.IBISSaturnImage
+
+IBISNodeTool.saturn.raw=/tufts/vue/images/chii_whistling.gif
+
+#HO 29/10/2010 END *******************
 
 linkTool.class=tufts.vue.LinkTool
 
