replaced hard coded menu item with English language resource, also debugged right-positioning of icon pillar in LWIBISNode
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10655 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -316,6 +316,9 @@ menu.windows.publish=Upload to Repository
 menu.windows.exporthandouts=Export Handouts and Notes (PDF)
 menu.windows.printvisible=Print Visible...
 menu.windows.formatpalette=Formatting Palette
+#HO 07/12/2010 BEGIN *********
+menu.windows.ibismenu=IBIS Node Menu
+#HO 07/12/2010 END **********
 menu.windows.info=Info
 menu.windows.mapinfo=Map Info
 menu.windows.outline=Outline
@@ -1046,6 +1049,7 @@ dockWindow.mergemaps.title=Merge Maps
 dockWindow.layers.title=Layers
 dockWindow.outline.title=Outline
 dockWindow.format.title=Format
+dockWindow.ibis.title=IBIS Nodes
 dockWindow.vueleopard.title=VUE-leopard-anchor
 dockWindow.interactionTools.title=Exploration Tools
 dockWindow.panner.title=Panner
