added 'Add IBIS Node' to content menu
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10667 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -238,6 +238,9 @@ menu.edit.shrinkselection=Shrink Selection
 menu.edit.preferences=Preferences 
 menu.edit.duplicate=Duplicate
 menu.content.addnode=Add Node
+#HO 12/12/2010 BEGIN *******
+menu.content.addIBISnode=Add IBIS Node
+#HO 12/12/2010 END *******
 menu.content.addtext=Add Text
 menu.view.zoomout=Zoom Out
 menu.view.zoomin=Zoom In
