menus a bit better, but there seems to be a bug that reselects deselected ones in the contentMenu
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10669 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1984,7 +1984,14 @@ IBISNodeTool.neptune.iconClass=tufts.vue.ibisicon.IBISNeptuneIcon
 
 IBISNodeTool.neptune.imageClass=tufts.vue.ibisimage.IBISNeptuneImage
 
-IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling.gif
+#HO 13/12/2010 BEGIN ***************
+#IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling_icon.gif
+
+IBISNodeTool.neptune.image=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.neptune.icon=/tufts/vue/images/chii_whistling_icon.gif
+#HO 13/12/2010 END ***************
 
 IBISNodeTool.uranus.class=tufts.vue.IBISNodeTool$IBISSubTool
 IBISNodeTool.uranus.shapeClass=tufts.vue.shape.RoundRect2D
