renamed IBISAcceptedIssue to IBISIssue
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10671 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1923,26 +1923,26 @@ IBISNodeTool.class=tufts.vue.IBISNodeTool
 
 IBISNodeTool.name=IBIS Node Tool
 
-IBISNodeTool.subtools=accepted_issue,pro_argument,con_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
+IBISNodeTool.subtools=issue,pro_argument,con_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
 
-IBISNodeTool.defaultSubtool=accepted_issue
+IBISNodeTool.defaultSubtool=issue
 
 # cursor 1 is "crosshair" cursor, same on Mac & PC
 IBISNodeTool.cursorID=1
 
-IBISNodeTool.accepted_issue.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.issue.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.accepted_issue.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.issue.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.accepted_issue.name=Accepted Issue
+IBISNodeTool.issue.name=Issue
 
-IBISNodeTool.accepted_issue.cssName=accepted_issue
+IBISNodeTool.issue.cssName=issue
 
-IBISNodeTool.accepted_issue.iconClass=tufts.vue.ibisicon.IBISAcceptedIssueIcon
+IBISNodeTool.issue.iconClass=tufts.vue.ibisicon.IBISIssueIcon
 
-IBISNodeTool.accepted_issue.imageClass=tufts.vue.ibisimage.IBISAcceptedIssueImage
+IBISNodeTool.issue.imageClass=tufts.vue.ibisimage.IBISIssueImage
 
-IBISNodeTool.accepted_issue.raw=/tufts/vue/images/accepted_issue.gif
+IBISNodeTool.issue.raw=/tufts/vue/images/accepted_issue.gif
 
 IBISNodeTool.pro_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
 
