renamed second item in IBIS menu to Answer
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10674 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1923,7 +1923,7 @@ IBISNodeTool.class=tufts.vue.IBISNodeTool
 
 IBISNodeTool.name=IBIS Node Tool
 
-IBISNodeTool.subtools=issue,pro_argument,con_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
+IBISNodeTool.subtools=issue,answer,con_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
 
 IBISNodeTool.defaultSubtool=issue
 
@@ -1944,19 +1944,19 @@ IBISNodeTool.issue.imageClass=tufts.vue.ibisimage.IBISIssueImage
 
 IBISNodeTool.issue.raw=/tufts/vue/images/accepted_issue.gif
 
-IBISNodeTool.pro_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.answer.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.pro_argument.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.answer.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.pro_argument.name=Pro Argument
+IBISNodeTool.answer.name=Answer
 
-IBISNodeTool.pro_argument.cssName=pro_argument
+IBISNodeTool.answer.cssName=answer
 
-IBISNodeTool.pro_argument.iconClass=tufts.vue.ibisicon.IBISProArgumentIcon
+IBISNodeTool.answer.iconClass=tufts.vue.ibisicon.IBISAnswerIcon
 
-IBISNodeTool.pro_argument.imageClass=tufts.vue.ibisimage.IBISProArgumentImage
+IBISNodeTool.answer.imageClass=tufts.vue.ibisimage.IBISAnswerImage
 
-IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument.gif
+IBISNodeTool.answer.raw=/tufts/vue/images/pro_argument.gif
 
 IBISNodeTool.con_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
 
