renamed third item in IBIS menu to IBISProArgument
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10677 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1923,7 +1923,7 @@ IBISNodeTool.class=tufts.vue.IBISNodeTool
 
 IBISNodeTool.name=IBIS Node Tool
 
-IBISNodeTool.subtools=issue,answer,con_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
+IBISNodeTool.subtools=issue,answer,pro_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
 
 IBISNodeTool.defaultSubtool=issue
 
@@ -1958,19 +1958,19 @@ IBISNodeTool.answer.imageClass=tufts.vue.ibisimage.IBISAnswerImage
 
 IBISNodeTool.answer.raw=/tufts/vue/images/pro_argument.gif
 
-IBISNodeTool.con_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.pro_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.con_argument.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.pro_argument.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.con_argument.name=Con Argument
+IBISNodeTool.pro_argument.name=Pro Argument
 
-IBISNodeTool.con_argument.cssName=con_argument
+IBISNodeTool.pro_argument.cssName=pro_argument
 
-IBISNodeTool.con_argument.iconClass=tufts.vue.ibisicon.IBISConArgumentIcon
+IBISNodeTool.pro_argument.iconClass=tufts.vue.ibisicon.IBISProArgumentIcon
 
-IBISNodeTool.con_argument.imageClass=tufts.vue.ibisimage.IBISConArgumentImage
+IBISNodeTool.pro_argument.imageClass=tufts.vue.ibisimage.IBISProArgumentImage
 
-IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument.gif
+IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument.gif
 
 IBISNodeTool.neptune.class=tufts.vue.IBISNodeTool$IBISSubTool
 
