renamed fourth item in IBIS menu to IBISConArgument
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10680 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1923,7 +1923,7 @@ IBISNodeTool.class=tufts.vue.IBISNodeTool
 
 IBISNodeTool.name=IBIS Node Tool
 
-IBISNodeTool.subtools=issue,answer,pro_argument,accepted_answer,rejected_answer,saturn,uranus,neptune,pluto
+IBISNodeTool.subtools=issue,answer,pro_argument,con_argument,rejected_answer,saturn,uranus,neptune,pluto
 
 IBISNodeTool.defaultSubtool=issue
 
@@ -2015,19 +2015,19 @@ IBISNodeTool.pluto.imageClass=tufts.vue.ibisimage.IBISPlutoImage
 
 IBISNodeTool.pluto.raw=/tufts/vue/images/chii_whistling.gif
 
-IBISNodeTool.accepted_answer.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.con_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.accepted_answer.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.con_argument.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.accepted_answer.name=Accepted Answer
+IBISNodeTool.con_argument.name=Con Argument
 
-IBISNodeTool.accepted_answer.cssName=accepted_answer
+IBISNodeTool.con_argument.cssName=con_argument
 
-IBISNodeTool.accepted_answer.iconClass=tufts.vue.ibisicon.IBISAcceptedAnswerIcon
+IBISNodeTool.con_argument.iconClass=tufts.vue.ibisicon.IBISConArgumentIcon
 
-IBISNodeTool.accepted_answer.imageClass=tufts.vue.ibisimage.IBISAcceptedAnswerImage
+IBISNodeTool.con_argument.imageClass=tufts.vue.ibisimage.IBISConArgumentImage
 
-IBISNodeTool.accepted_answer.raw=/tufts/vue/images/accepted_answer.gif
+IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument.gif
 
 IBISNodeTool.rejected_answer.class=tufts.vue.IBISNodeTool$IBISSubTool
 
