shortened IBIS menu to four basic types
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10681 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1923,7 +1923,7 @@ IBISNodeTool.class=tufts.vue.IBISNodeTool
 
 IBISNodeTool.name=IBIS Node Tool
 
-IBISNodeTool.subtools=issue,answer,pro_argument,con_argument,rejected_answer,saturn,uranus,neptune,pluto
+IBISNodeTool.subtools=issue,answer,pro_argument,con_argument
 
 IBISNodeTool.defaultSubtool=issue
 
