bloody hell it works! IBIS node context menu implemented
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10683 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -276,6 +276,9 @@ menu.align=Align
 menu.layout=Arrange Linked
 menu.arrange=Arrange
 menu.image=Image
+#HO 17/12/2010 BEGIN ***************
+menu.ibis=Change IBIS Status
+#HO 17/12/2010 END ***************
 menu.node=Node
 menu.link=Links
 menu.help=Help
@@ -1944,6 +1947,14 @@ IBISNodeTool.issue.imageClass=tufts.vue.ibisimage.IBISIssueImage
 
 IBISNodeTool.issue.raw=/tufts/vue/images/accepted_issue.gif
 
+#HO 16/12/2010 BEGIN ********
+
+IBISNodeTool.issue.type=issue
+
+IBISNodeTool.issue.subtypes=issue,issue_resolved,issue_insoluble,issue_rejected
+
+#HO 16/12/2010 END ********
+
 IBISNodeTool.answer.class=tufts.vue.IBISNodeTool$IBISSubTool
 
 IBISNodeTool.answer.shapeClass=tufts.vue.shape.RoundRect2D
@@ -1957,6 +1968,13 @@ IBISNodeTool.answer.iconClass=tufts.vue.ibisicon.IBISAnswerIcon
 IBISNodeTool.answer.imageClass=tufts.vue.ibisimage.IBISAnswerImage
 
 IBISNodeTool.answer.raw=/tufts/vue/images/pro_argument.gif
+
+#HO 16/12/2010 BEGIN ********
+IBISNodeTool.answer.subtypes=answer,answer_accepted,answer_likely,answer_unlikely,answer_rejected
+
+IBISNodeTool.answer.type=answer
+
+#HO 16/12/2010 END ********
 
 IBISNodeTool.pro_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
 
@@ -1972,48 +1990,59 @@ IBISNodeTool.pro_argument.imageClass=tufts.vue.ibisimage.IBISProArgumentImage
 
 IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument.gif
 
-IBISNodeTool.neptune.class=tufts.vue.IBISNodeTool$IBISSubTool
+#HO 16/12/2010 BEGIN ********
+IBISNodeTool.pro_argument.subtypes=pro_argument,pro_argument_dominant,pro_argument_failing
 
-IBISNodeTool.neptune.name=Neptune
+IBISNodeTool.pro_argument.type=pro_argument
+#HO 16/12/2010 END ********
 
-IBISNodeTool.neptune.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.issue_resolved.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.neptune.cssName=neptune
+IBISNodeTool.issue_resolved.name=Resolved Issue
 
-IBISNodeTool.neptune.iconClass=tufts.vue.ibisicon.IBISNeptuneIcon
+IBISNodeTool.issue_resolved.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.neptune.imageClass=tufts.vue.ibisimage.IBISNeptuneImage
+IBISNodeTool.issue_resolved.cssName=issue_resolved
+
+IBISNodeTool.issue_resolved.iconClass=tufts.vue.ibisicon.IBISIssue_ResolvedIcon
+
+IBISNodeTool.issue_resolved.imageClass=tufts.vue.ibisimage.IBISIssue_ResolvedImage
+
+IBISNodeTool.issue_resolved.type=issue
 
 #HO 13/12/2010 BEGIN ***************
 #IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling.gif
-IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling_icon.gif
+IBISNodeTool.issue_resolved.raw=/tufts/vue/images/chii_whistling_icon.gif
 
-IBISNodeTool.neptune.image=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.issue_resolved.image=/tufts/vue/images/chii_whistling.gif
 
-IBISNodeTool.neptune.icon=/tufts/vue/images/chii_whistling_icon.gif
+IBISNodeTool.issue_resolved.icon=/tufts/vue/images/chii_whistling_icon.gif
 #HO 13/12/2010 END ***************
 
-IBISNodeTool.uranus.class=tufts.vue.IBISNodeTool$IBISSubTool
-IBISNodeTool.uranus.shapeClass=tufts.vue.shape.RoundRect2D
-IBISNodeTool.uranus.name=Uranus
-IBISNodeTool.uranus.cssName=uranus
-IBISNodeTool.uranus.iconClass=tufts.vue.ibisicon.IBISUranusIcon
-IBISNodeTool.uranus.imageClass=tufts.vue.ibisimage.IBISUranusImage
-IBISNodeTool.uranus.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.issue_insoluble.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.issue_insoluble.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.issue_insoluble.name=Insoluble Issue
+IBISNodeTool.issue_insoluble.cssName=issue_insoluble
+IBISNodeTool.issue_insoluble.iconClass=tufts.vue.ibisicon.IBISIssue_InsolubleIcon
+IBISNodeTool.issue_insoluble.imageClass=tufts.vue.ibisimage.IBISIssue_InsolubleImage
+IBISNodeTool.issue_insoluble.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.issue_insoluble.type=issue
 
-IBISNodeTool.pluto.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.issue_rejected.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.pluto.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.issue_rejected.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.pluto.name=Pluto
+IBISNodeTool.issue_rejected.name=Rejected Issue
 
-IBISNodeTool.pluto.cssName=pluto
+IBISNodeTool.issue_rejected.cssName=issue_rejected
 
-IBISNodeTool.pluto.iconClass=tufts.vue.ibisicon.IBISPlutoIcon
+IBISNodeTool.issue_rejected.iconClass=tufts.vue.ibisicon.IBISIssue_RejectedIcon
 
-IBISNodeTool.pluto.imageClass=tufts.vue.ibisimage.IBISPlutoImage
+IBISNodeTool.issue_rejected.imageClass=tufts.vue.ibisimage.IBISIssue_RejectedImage
 
-IBISNodeTool.pluto.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.issue_rejected.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.issue_rejected.type=issue
 
 IBISNodeTool.con_argument.class=tufts.vue.IBISNodeTool$IBISSubTool
 
@@ -2029,33 +2058,139 @@ IBISNodeTool.con_argument.imageClass=tufts.vue.ibisimage.IBISConArgumentImage
 
 IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument.gif
 
-IBISNodeTool.rejected_answer.class=tufts.vue.IBISNodeTool$IBISSubTool
+#HO 16/12/2010 BEGIN ********
+IBISNodeTool.con_argument.subtypes=con_argument,con_argument_dominant,con_argument_failing
 
-IBISNodeTool.rejected_answer.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.con_argument.type=con_argument
+#HO 16/12/2010 END ********
 
-IBISNodeTool.rejected_answer.name=Rejected Answer
+IBISNodeTool.answer_rejected.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.rejected_answer.cssName=rejected_answer
+IBISNodeTool.answer_rejected.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.rejected_answer.iconClass=tufts.vue.ibisicon.IBISRejectedAnswerIcon
+IBISNodeTool.answer_rejected.name=Rejected Answer
 
-IBISNodeTool.rejected_answer.imageClass=tufts.vue.ibisimage.IBISRejectedAnswerImage
+IBISNodeTool.answer_rejected.cssName=answer_rejected
 
-IBISNodeTool.rejected_answer.raw=/tufts/vue/images/rejected_answer.gif
+IBISNodeTool.answer_rejected.iconClass=tufts.vue.ibisicon.IBISAnswer_RejectedIcon
 
-IBISNodeTool.saturn.class=tufts.vue.IBISNodeTool$IBISSubTool
+IBISNodeTool.answer_rejected.imageClass=tufts.vue.ibisimage.IBISAnswer_RejectedImage
 
-IBISNodeTool.saturn.shapeClass=tufts.vue.shape.RoundRect2D
+IBISNodeTool.answer_rejected.raw=/tufts/vue/images/chii_whistling.gif
 
-IBISNodeTool.saturn.name=Saturn
+IBISNodeTool.answer_rejected.type=answer
 
-IBISNodeTool.saturn.cssName=saturn
+IBISNodeTool.answer_accepted.class=tufts.vue.IBISNodeTool$IBISSubTool
 
-IBISNodeTool.saturn.iconClass=tufts.vue.ibisicon.IBISSaturnIcon
+IBISNodeTool.answer_accepted.shapeClass=tufts.vue.shape.RoundRect2D
 
-IBISNodeTool.saturn.imageClass=tufts.vue.ibisimage.IBISSaturnImage
+IBISNodeTool.answer_accepted.name=Accepted Answer
 
-IBISNodeTool.saturn.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.answer_accepted.cssName=answer_accepted
+
+IBISNodeTool.answer_accepted.iconClass=tufts.vue.ibisicon.IBISAnswer_AcceptedIcon
+
+IBISNodeTool.answer_accepted.imageClass=tufts.vue.ibisimage.IBISAnswer_AcceptedImage
+
+IBISNodeTool.answer_accepted.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.answer_accepted.type=answer
+
+IBISNodeTool.answer_likely.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.answer_likely.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.answer_likely.name=Likely Answer
+
+IBISNodeTool.answer_likely.cssName=answer_likely
+
+IBISNodeTool.answer_likely.iconClass=tufts.vue.ibisicon.IBISAnswer_LikelyIcon
+
+IBISNodeTool.answer_likely.imageClass=tufts.vue.ibisimage.IBISAnswer_LikelyImage
+
+IBISNodeTool.answer_likely.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.answer_likely.type=answer
+
+IBISNodeTool.answer_unlikely.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.answer_unlikely.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.answer_unlikely.name=Unlikely Answer
+
+IBISNodeTool.answer_unlikely.cssName=answer_unlikely
+
+IBISNodeTool.answer_unlikely.iconClass=tufts.vue.ibisicon.IBISAnswer_UnlikelyIcon
+
+IBISNodeTool.answer_unlikely.imageClass=tufts.vue.ibisimage.IBISAnswer_UnlikelyImage
+
+IBISNodeTool.answer_unlikely.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.answer_unlikely.type=answer
+
+IBISNodeTool.pro_argument_dominant.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.pro_argument_dominant.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.pro_argument_dominant.name=Dominant Pro Argument
+
+IBISNodeTool.pro_argument_dominant.cssName=pro_argument_dominant
+
+IBISNodeTool.pro_argument_dominant.iconClass=tufts.vue.ibisicon.IBISProArgument_DominantIcon
+
+IBISNodeTool.pro_argument_dominant.imageClass=tufts.vue.ibisimage.IBISProArgument_DominantImage
+
+IBISNodeTool.pro_argument_dominant.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.pro_argument_dominant.type=pro_argument
+
+IBISNodeTool.pro_argument_failing.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.pro_argument_failing.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.pro_argument_failing.name=Failing Pro Argument
+
+IBISNodeTool.pro_argument_failing.cssName=pro_argument_failing
+
+IBISNodeTool.pro_argument_failing.iconClass=tufts.vue.ibisicon.IBISProArgument_FailingIcon
+
+IBISNodeTool.pro_argument_failing.imageClass=tufts.vue.ibisimage.IBISProArgument_FailingImage
+
+IBISNodeTool.pro_argument_failing.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.pro_argument_failing.type=pro_argument
+
+IBISNodeTool.con_argument_dominant.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.con_argument_dominant.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.con_argument_dominant.name=Dominant Con Argument
+
+IBISNodeTool.con_argument_dominant.cssName=con_argument_dominant
+
+IBISNodeTool.con_argument_dominant.iconClass=tufts.vue.ibisicon.IBISConArgument_DominantIcon
+
+IBISNodeTool.con_argument_dominant.imageClass=tufts.vue.ibisimage.IBISConArgument_DominantImage
+
+IBISNodeTool.con_argument_dominant.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.con_argument_dominant.type=con_argument
+
+IBISNodeTool.con_argument_failing.class=tufts.vue.IBISNodeTool$IBISSubTool
+
+IBISNodeTool.con_argument_failing.shapeClass=tufts.vue.shape.RoundRect2D
+
+IBISNodeTool.con_argument_failing.name=Failing Con Argument
+
+IBISNodeTool.con_argument_failing.cssName=con_argument_failing
+
+IBISNodeTool.con_argument_failing.iconClass=tufts.vue.ibisicon.IBISConArgument_FailingIcon
+
+IBISNodeTool.con_argument_failing.imageClass=tufts.vue.ibisimage.IBISConArgument_FailingImage
+
+IBISNodeTool.con_argument_failing.raw=/tufts/vue/images/chii_whistling.gif
+
+IBISNodeTool.con_argument_failing.type=con_argument
 
 #HO 29/10/2010 END *******************
 
