fixed bug whereby menu actions weren't being fired on IBIS nodes; replaced placeholder images with real ones, added IBIS node type context menu
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10686 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -278,6 +278,7 @@ menu.arrange=Arrange
 menu.image=Image
 #HO 17/12/2010 BEGIN ***************
 menu.ibis=Change IBIS Status
+menu.ibis.type=Change IBIS Type
 #HO 17/12/2010 END ***************
 menu.node=Node
 menu.link=Links
@@ -1733,7 +1734,7 @@ IBISNodeModeTool.name=IBIS Node Tool
 
 IBISNodeModeTool.shortcutKey=i
 
-IBISNodeModeTool.raw=/tufts/vue/images/accepted_issue.gif
+IBISNodeModeTool.raw=/tufts/vue/images/issue.jpg
 
 IBISNodeModeTool.cursorID=1
 
@@ -1945,7 +1946,7 @@ IBISNodeTool.issue.iconClass=tufts.vue.ibisicon.IBISIssueIcon
 
 IBISNodeTool.issue.imageClass=tufts.vue.ibisimage.IBISIssueImage
 
-IBISNodeTool.issue.raw=/tufts/vue/images/accepted_issue.gif
+IBISNodeTool.issue.raw=/tufts/vue/images/issue.jpg
 
 #HO 16/12/2010 BEGIN ********
 
@@ -1967,7 +1968,7 @@ IBISNodeTool.answer.iconClass=tufts.vue.ibisicon.IBISAnswerIcon
 
 IBISNodeTool.answer.imageClass=tufts.vue.ibisimage.IBISAnswerImage
 
-IBISNodeTool.answer.raw=/tufts/vue/images/pro_argument.gif
+IBISNodeTool.answer.raw=/tufts/vue/images/answer.jpg
 
 #HO 16/12/2010 BEGIN ********
 IBISNodeTool.answer.subtypes=answer,answer_accepted,answer_likely,answer_unlikely,answer_rejected
@@ -1988,7 +1989,7 @@ IBISNodeTool.pro_argument.iconClass=tufts.vue.ibisicon.IBISProArgumentIcon
 
 IBISNodeTool.pro_argument.imageClass=tufts.vue.ibisimage.IBISProArgumentImage
 
-IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument.gif
+IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument.jpg
 
 #HO 16/12/2010 BEGIN ********
 IBISNodeTool.pro_argument.subtypes=pro_argument,pro_argument_dominant,pro_argument_failing
@@ -2012,9 +2013,9 @@ IBISNodeTool.issue_resolved.type=issue
 
 #HO 13/12/2010 BEGIN ***************
 #IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling.gif
-IBISNodeTool.issue_resolved.raw=/tufts/vue/images/chii_whistling_icon.gif
+IBISNodeTool.issue_resolved.raw=/tufts/vue/images/issue_resolved.jpg
 
-IBISNodeTool.issue_resolved.image=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.issue_resolved.image=/tufts/vue/images/issue_resolved.jpg
 
 IBISNodeTool.issue_resolved.icon=/tufts/vue/images/chii_whistling_icon.gif
 #HO 13/12/2010 END ***************
@@ -2025,7 +2026,7 @@ IBISNodeTool.issue_insoluble.name=Insoluble Issue
 IBISNodeTool.issue_insoluble.cssName=issue_insoluble
 IBISNodeTool.issue_insoluble.iconClass=tufts.vue.ibisicon.IBISIssue_InsolubleIcon
 IBISNodeTool.issue_insoluble.imageClass=tufts.vue.ibisimage.IBISIssue_InsolubleImage
-IBISNodeTool.issue_insoluble.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.issue_insoluble.raw=/tufts/vue/images/issue_insoluble.jpg
 IBISNodeTool.issue_insoluble.type=issue
 
 IBISNodeTool.issue_rejected.class=tufts.vue.IBISNodeTool$IBISSubTool
@@ -2040,7 +2041,7 @@ IBISNodeTool.issue_rejected.iconClass=tufts.vue.ibisicon.IBISIssue_RejectedIcon
 
 IBISNodeTool.issue_rejected.imageClass=tufts.vue.ibisimage.IBISIssue_RejectedImage
 
-IBISNodeTool.issue_rejected.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.issue_rejected.raw=/tufts/vue/images/issue_rejected.jpg
 
 IBISNodeTool.issue_rejected.type=issue
 
@@ -2056,7 +2057,7 @@ IBISNodeTool.con_argument.iconClass=tufts.vue.ibisicon.IBISConArgumentIcon
 
 IBISNodeTool.con_argument.imageClass=tufts.vue.ibisimage.IBISConArgumentImage
 
-IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument.gif
+IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument.jpg
 
 #HO 16/12/2010 BEGIN ********
 IBISNodeTool.con_argument.subtypes=con_argument,con_argument_dominant,con_argument_failing
@@ -2076,7 +2077,7 @@ IBISNodeTool.answer_rejected.iconClass=tufts.vue.ibisicon.IBISAnswer_RejectedIco
 
 IBISNodeTool.answer_rejected.imageClass=tufts.vue.ibisimage.IBISAnswer_RejectedImage
 
-IBISNodeTool.answer_rejected.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.answer_rejected.raw=/tufts/vue/images/answer_rejected.jpg
 
 IBISNodeTool.answer_rejected.type=answer
 
@@ -2092,7 +2093,7 @@ IBISNodeTool.answer_accepted.iconClass=tufts.vue.ibisicon.IBISAnswer_AcceptedIco
 
 IBISNodeTool.answer_accepted.imageClass=tufts.vue.ibisimage.IBISAnswer_AcceptedImage
 
-IBISNodeTool.answer_accepted.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.answer_accepted.raw=/tufts/vue/images/answer_accepted.jpg
 
 IBISNodeTool.answer_accepted.type=answer
 
@@ -2108,7 +2109,7 @@ IBISNodeTool.answer_likely.iconClass=tufts.vue.ibisicon.IBISAnswer_LikelyIcon
 
 IBISNodeTool.answer_likely.imageClass=tufts.vue.ibisimage.IBISAnswer_LikelyImage
 
-IBISNodeTool.answer_likely.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.answer_likely.raw=/tufts/vue/images/answer_likely.jpg
 
 IBISNodeTool.answer_likely.type=answer
 
@@ -2124,7 +2125,7 @@ IBISNodeTool.answer_unlikely.iconClass=tufts.vue.ibisicon.IBISAnswer_UnlikelyIco
 
 IBISNodeTool.answer_unlikely.imageClass=tufts.vue.ibisimage.IBISAnswer_UnlikelyImage
 
-IBISNodeTool.answer_unlikely.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.answer_unlikely.raw=/tufts/vue/images/answer_unlikely.jpg
 
 IBISNodeTool.answer_unlikely.type=answer
 
@@ -2140,7 +2141,7 @@ IBISNodeTool.pro_argument_dominant.iconClass=tufts.vue.ibisicon.IBISProArgument_
 
 IBISNodeTool.pro_argument_dominant.imageClass=tufts.vue.ibisimage.IBISProArgument_DominantImage
 
-IBISNodeTool.pro_argument_dominant.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.pro_argument_dominant.raw=/tufts/vue/images/pro_argument_dominant.jpg
 
 IBISNodeTool.pro_argument_dominant.type=pro_argument
 
@@ -2156,7 +2157,7 @@ IBISNodeTool.pro_argument_failing.iconClass=tufts.vue.ibisicon.IBISProArgument_F
 
 IBISNodeTool.pro_argument_failing.imageClass=tufts.vue.ibisimage.IBISProArgument_FailingImage
 
-IBISNodeTool.pro_argument_failing.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.pro_argument_failing.raw=/tufts/vue/images/pro_argument_failing.jpg
 
 IBISNodeTool.pro_argument_failing.type=pro_argument
 
@@ -2172,7 +2173,7 @@ IBISNodeTool.con_argument_dominant.iconClass=tufts.vue.ibisicon.IBISConArgument_
 
 IBISNodeTool.con_argument_dominant.imageClass=tufts.vue.ibisimage.IBISConArgument_DominantImage
 
-IBISNodeTool.con_argument_dominant.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.con_argument_dominant.raw=/tufts/vue/images/con_argument_dominant.jpg
 
 IBISNodeTool.con_argument_dominant.type=con_argument
 
@@ -2188,7 +2189,7 @@ IBISNodeTool.con_argument_failing.iconClass=tufts.vue.ibisicon.IBISConArgument_F
 
 IBISNodeTool.con_argument_failing.imageClass=tufts.vue.ibisimage.IBISConArgument_FailingImage
 
-IBISNodeTool.con_argument_failing.raw=/tufts/vue/images/chii_whistling.gif
+IBISNodeTool.con_argument_failing.raw=/tufts/vue/images/con_argument_failing.jpg
 
 IBISNodeTool.con_argument_failing.type=con_argument
 
